cpp/test/Slice/errorDetection/InterfaceRedefinition.ice
// **********************************************************************
//
// Copyright (c) 2001
// ZeroC, Inc.
// Billerica, MA, USA
//
// All Rights Reserved.
//
// Ice is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License version 2 as published by
// the Free Software Foundation.
//
// **********************************************************************

interface Intf1 { void op(); };
interface Intf1 { void op(); };
interface Intf1;

local interface Intf2 { void op(); };
local interface Intf2 { void op(); };
local interface Intf2;
